--- a/package.json
+++ b/package.json
@@ -2,17 +2,17 @@
   "name": "cognitive-complexity-show",
   "displayName": "cognitive-complexity-show",
   "description": "",
-  "version": "0.0.5",
+  "version": "0.0.6",
   "engines": {
     "vscode": "^1.65.0"
   },
-  "publisher": "ampcpmgp",
+  "publisher": "Chibisuke",
   "categories": [
     "Other"
   ],
   "repository": {
     "type": "git",
-    "url": "https://github.com/ampcpmgp/vscode-cognitive-complexity-show"
+    "url": "https://github.com/RasmusBergHogia/vscode-cognitive-complexity-show"
   },
   "activationEvents": [
     "onCommand:cognitive-complexity-show.execute",
@@ -50,9 +50,9 @@
     "eslint": "^8.11.0",
     "glob": "^7.2.0",
     "mocha": "^9.2.2",
-    "typescript": "^4.5.5"
+    "typescript": "^5.2.2"
   },
   "dependencies": {
-    "cognitive-complexity-ts": "^0.5.0"
+    "cognitive-complexity-ts": "^0.6.5"
   }
 }
