--- a/package.json
+++ b/package.json
@@ -6,13 +6,13 @@
   "engines": {
     "vscode": "^1.65.0"
   },
-  "publisher": "Chibisuke",
+  "publisher": "Chibi86",
   "categories": [
     "Other"
   ],
   "repository": {
     "type": "git",
-    "url": "https://github.com/RasmusBergHogia/vscode-cognitive-complexity-show"
+    "url": "https://github.com/Chibi86/vscode-cognitive-complexity-show"
   },
   "activationEvents": [
     "onCommand:cognitive-complexity-show.execute",
